http://jira.sakaiproject.org/jira/browse/EVALSYS-696 Fixed up the entity provider
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@59315 fdecad78-55fc-0310-b1b2-d7d25cf747c9